<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:padding="16dp"

        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_ans1"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/ans1"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_ans2"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/ans2"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_ans3"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/ans3"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_ans4"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/ans4"
            />

    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:onClick="submitQuestion_BTN"
        />

</LinearLayout>